test/expected/perr_missing_done.out
shit: 2:13: error: 'done' has no matching 'while', 'until', or 'for'.
     2 |  while true; done
       |              ^~~~ here.
